KSCM-2537 - Return to Previous - The submit button in the Return to Previous node popup is too big - Fixed the button disabling issue in a different manner (showing error message instead due to technical difficulties)
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@73745 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -812,7 +812,7 @@ fieldset .uif-actionLink{
 }
 
 #CM-ReturnToPrevious-Dialog-NodeNamesDropdown {
-  padding-top: 20px;
+  padding-top: 30px;
 }
 
 #KS-CM-DialogExplanation {
